Commit 2 03.09.21 Changed 2 files.

--- a/src/main/resources/templates/user_pageForUpdated.html
+++ b/src/main/resources/templates/user_pageForUpdated.html
@@ -34,7 +34,7 @@
                             <tr>
                                 <td class="inner-table" style="border-left: 0;border-right: 0;border-bottom: 0;">
                                     <div class="table-responsive">
-                                        <table class="table table-striped">
+                                        <table id="tableUsers" class="table table-striped">
                                             <thead class="text-center">
                                             <tr>
                                                 <th class="border-left-0">ID</th>
@@ -45,7 +45,7 @@
                                                 <th class="border-right-0">Role</th>
                                             </tr>
                                             </thead>
-                                            <tbody id="data" class="text-center">
+                                            <tbody id="bodyUsers" class="text-center">
 <!--                                            <tr th:each="user : ${allUser}">-->
 <!--                                                <td class="border-left-0" th:text="${user.id}"></td>-->
 <!--                                                <td th:text="${user.name}"></td>-->
