Commit 1 23.09.21 Changed 3 files, working application with header.

--- a/src/main/resources/templates/user_pageEmpty.html
+++ b/src/main/resources/templates/user_pageEmpty.html
@@ -11,7 +11,7 @@
 
 <body>
 <!--<div th:replace="fragments :: header">Header</div>-->
-<div>Header</div>
+<div id="header">Header</div>
 <div class="row no-gutters">
     <div class="col-2">
         <div id="v-pills-tab" class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical"><a
@@ -54,6 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
 <script src="user_pageForUpdated.js"></script>
+<script src="header.js"></script>
 </body>
 
 </html>
