Commit 2 23.09.21 Changed 2 files, working application with header.

--- a/src/main/resources/templates/user_pageEmpty.html
+++ b/src/main/resources/templates/user_pageEmpty.html
@@ -7,6 +7,7 @@
     <title>User_page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Navigation-Clean.css" type="text/css">
+    <link rel="stylesheet" href="/admin_page.css" type="text/css">
 </head>
 
 <body>
