Commit 2 25.10.21 Changed 6 files.

--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html lang="en">
 
 <head>
-    <div th:replace="fragments :: head">Head</div>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>admin_page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/admin_page.css" type="text/css">
 </head>
 
 <body>
-<div th:replace="fragments :: header">Header</div>
+
+<script src="header.js"></script>
 <div class="row no-gutters">
     <div class="col-2">
         <div id="v-pills-tab" class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
@@ -190,21 +193,21 @@
                                             <div class="col-4 offset-4">
                                                 <div class="row">
                                                     <div class="col">
-                                                        <form class="text-center" method="post" th:action="@{/admin/users}" th:object="${user}">
-                                                            <div class="form-group"><label id="labelFirstName" for="name"><strong>First name</strong></label><input class="form-control" type="text" th:value="*{getName()}" id="name" name="name" placeholder="First name" required=""></div>
-                                                            <div class="form-group"><label id="labelLastName" for="surname"><strong>Last name</strong></label><input class="form-control" type="text" th:value="*{getSurname()}" id="surname" name="surname" placeholder="Last name" required=""></div>
-                                                            <div class="form-group"><label id="labelAge" for="age"><strong>Age</strong></label><input class="form-control" type="number" th:value="*{age}" id="age" name="age" placeholder="Age" required=""></div>
-                                                            <div class="form-group"><label id="labelEmail" for="email"><strong>Email</strong></label><input class="form-control" type="email" th:value="*{email}" id="email" placeholder="Email" name="email" required=""></div>
-                                                            <div class="form-group"><label id="password" for="password"><strong>Password</strong></label><input class="form-control" type="password" th:value="*{password}" id="password1" name="password" placeholder="Password" required=""></div>
-                                                            <div class="form-group"><label id="role" for="role"><strong>Role</strong></label><select class="form-control" multiple="multiple" name="rolesNameList" th:value="${user.getRolesNameList()}">
-                                                                    <option th:each="role : ${listRoles}"
-                                                                            th:value="${!role.getRole().startsWith('ROLE_')}? ${role.getRole()}: ${role.getRole().replaceFirst('ROLE_', '')}"
-                                                                            th:text="${!role.getRole().startsWith('ROLE_')}? ${role.getRole()}: ${role.getRole().replaceFirst('ROLE_', '')}">
-                                                                    </option>
-                                                                </select>
-                                                            </div>
-                                                            <button class="btn btn-success" type="submit">Add new user</button>
-                                                        </form>
+<!--                                                        <form class="text-center" method="post" th:action="@{/admin/users}" th:object="${user}">-->
+<!--                                                            <div class="form-group"><label id="labelFirstName" for="name"><strong>First name</strong></label><input class="form-control" type="text" th:value="*{getName()}" id="name" name="name" placeholder="First name" required=""></div>-->
+<!--                                                            <div class="form-group"><label id="labelLastName" for="surname"><strong>Last name</strong></label><input class="form-control" type="text" th:value="*{getSurname()}" id="surname" name="surname" placeholder="Last name" required=""></div>-->
+<!--                                                            <div class="form-group"><label id="labelAge" for="age"><strong>Age</strong></label><input class="form-control" type="number" th:value="*{age}" id="age" name="age" placeholder="Age" required=""></div>-->
+<!--                                                            <div class="form-group"><label id="labelEmail" for="email"><strong>Email</strong></label><input class="form-control" type="email" th:value="*{email}" id="email" placeholder="Email" name="email" required=""></div>-->
+<!--                                                            <div class="form-group"><label id="password" for="password"><strong>Password</strong></label><input class="form-control" type="password" th:value="*{password}" id="password1" name="password" placeholder="Password" required=""></div>-->
+<!--                                                            <div class="form-group"><label id="role" for="role"><strong>Role</strong></label><select class="form-control" multiple="multiple" name="rolesNameList" th:value="${user.getRolesNameList()}">-->
+<!--                                                                    <option th:each="role : ${listRoles}"-->
+<!--                                                                            th:value="${!role.getRole().startsWith('ROLE_')}? ${role.getRole()}: ${role.getRole().replaceFirst('ROLE_', '')}"-->
+<!--                                                                            th:text="${!role.getRole().startsWith('ROLE_')}? ${role.getRole()}: ${role.getRole().replaceFirst('ROLE_', '')}">-->
+<!--                                                                    </option>-->
+<!--                                                                </select>-->
+<!--                                                            </div>-->
+<!--                                                            <button class="btn btn-success" type="submit">Add new user</button>-->
+<!--                                                        </form>-->
                                                     </div>
                                                 </div>
                                             </div>
@@ -243,17 +246,17 @@
                                             </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                            <tr th:each="user : ${allUser}">
-                                                <td class="border-left-0" th:text="${user.id}">Cell 1</td>
-                                                <td th:text="${user.name}">Cell 2</td>
-                                                <td th:text="${user.surname}">Cell 3</td>
-                                                <td th:text="${user.age}">Cell 4</td>
-                                                <td th:text="${user.email}">Cell 5</td>
-                                                <td class="border-right-0">
-                                                    <span th:each="role, iStat : ${user.roles}"
-                                                          th:text="!${iStat.last}?${#strings.substring(role.role,5)}+' ':${#strings.substring(role.role,5)}"></span>
-                                                </td>
-                                            </tr>
+<!--                                            <tr th:each="user : ${allUser}">-->
+<!--                                                <td class="border-left-0" th:text="${user.id}">Cell 1</td>-->
+<!--                                                <td th:text="${user.name}">Cell 2</td>-->
+<!--                                                <td th:text="${user.surname}">Cell 3</td>-->
+<!--                                                <td th:text="${user.age}">Cell 4</td>-->
+<!--                                                <td th:text="${user.email}">Cell 5</td>-->
+<!--                                                <td class="border-right-0">-->
+<!--                                                    <span th:each="role, iStat : ${user.roles}"-->
+<!--                                                          th:text="!${iStat.last}?${#strings.substring(role.role,5)}+' ':${#strings.substring(role.role,5)}"></span>-->
+<!--                                                </td>-->
+<!--                                            </tr>-->
                                             </tbody>
                                         </table>
                                     </div>
@@ -269,6 +272,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
