--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -54,7 +54,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
-<script src="user_pageForUpdated.js"></script>
+<script src="user_page.js"></script>
 <script src="header.js"></script>
 </body>
 
