Commit 1 27.10.21 Add 1 file, changed 1 file, working with header.

--- a/src/main/resources/templates/admin_page_origin.html
+++ b/src/main/resources/templates/admin_page_origin.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div id="header">Header</div>
+<script src="header.js"></script>
 <div class="row no-gutters">
     <div class="col-2">
         <div id="v-pills-tab" class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
@@ -272,7 +272,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
-<script src="/../header.js"></script>
 
 </body>
 
