--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -51,20 +51,10 @@
                                     <tr>
                                         <td id="inner-table" class="inner-table">
                                             <div class="table-responsive" id="admin-allUsers-table">
-                                                <table class="table table-striped">
-                                                    <thead class="text-center">
-                                                    <tr>
-                                                        <th class="border-left-0">ID</th>
-                                                        <th>First Name</th>
-                                                        <th>Last Name</th>
-                                                        <th>Age</th>
-                                                        <th>Email</th>
-                                                        <th>Role</th>
-                                                        <th>Edit</th>
-                                                        <th class="border-right-0">Delete</th>
-                                                    </tr>
+                                                <table id="tableAllUsers" class="table table-striped">
+                                                    <thead id="headAllUsers" class="text-center">
                                                     </thead>
-                                                    <tbody class="text-center">
+                                                    <tbody id="bodyAllUsers" class="text-center">
                                                     <th:block th:each="user : ${allUser}">
                                                         <tr>
                                                             <td class="border-left-0" th:text="${user.id}">Cell 1</td>
@@ -234,7 +224,7 @@
                             <tr>
                                 <td id="myUserTableCell" class="inner-table">
                                     <div class="table-responsive">
-                                        <table id="aboutUser" class="table table-striped">
+                                        <table id="tableAboutUser" class="table table-striped">
                                             <thead id="headAboutUser" class="text-center">
                                             </thead>
                                             <tbody id="bodyAboutUser" class="text-center">
@@ -253,6 +243,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+<script src="/../admin_page.js"></script>
 <script src="/../header.js"></script>
 
 </body>
