Commit 1 15.11.21 changed 2 files.

--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -153,13 +153,13 @@
                         </div>
                         <div id="new-user" class="tab-pane fade" role="tabpanel" aria-labelled="new-user-tab">
                             <div class="table-responsive table-bordered">
-                                <table class="table table-bordered">
-                                    <thead class="thead-light">
+                                <table id="tableNewUser" class="table table-bordered">
+                                    <thead id="headNewUser" class="thead-light">
                                     <tr>
                                         <th>Add new user</th>
                                     </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="bodyNewUser">
                                     <tr>
                                         <td id="panel-add-new-user">
                                             <div class="col-4 offset-4">
